# amplifier-module-hooks-compact

./: .gitignore  LICENSE  README.md  bundle.md  pyproject.toml
amplifier_module_hooks_compact/: __init__.py  hook.py  pipeline.py  telemetry.py
amplifier_module_hooks_compact/builtin_filters/: brew.yaml  curl.yaml  docker.yaml  make.yaml  pip.yaml
amplifier_module_hooks_compact/filters/: __init__.py  build.py  git.py  lint.py  test_runners.py  yaml_engine.py
behaviors/: compact.yaml
docs/plans/: 2026-04-21-code-telemetry-implementation.md  2026-04-21-doc-hygiene-implementation.md  2026-04-21-pre-canary-hygiene-design.md
eval/: README.md  analyze.sh  analyze_ab.py  analyze_sessions.py  bootstrap.sh  dtu-run-eval.sh  extract_metrics.py  run-eval.sh  simulate_all_filters.py  test-cases.yaml
eval/profiles/: hooks-compact-with.yaml  hooks-compact-without.yaml
eval/recipes/: dtu-ab-test.yaml
eval/results/: dtu-ab-test-report-2026-04-21.md
scripts/: bump-canary.sh  bump-version.sh  team-report.sh
tests/: conftest.py  test_behavior_yaml.py  test_behavioral.py  test_build.py  test_builtin_yaml.py  test_bump_canary.py  test_classify.py  test_dtu_profiles.py  test_git.py  test_hook.py  test_init.py  test_lint.py  test_mount.py  test_pipeline.py  test_telemetry.py  test_test_runners.py  test_validation.py  test_yaml_engine.py
tests/fixtures/: cargo_test_all_pass.txt  cargo_test_failures.txt  git_diff_unified.txt  git_status_dirty.txt  pytest_all_pass.txt  pytest_failures.txt
